# priorizacion_hnd

./: app.py  main.py  pyproject.toml  simple_plotly_map.py  streamlit_app.py
datos/: arbol_insumos.parquet  arbol_insumos_completo.parquet  cdata.csv  cdata_hnd.csv  cdata_honduras.csv  ciiu_finales.csv  demanda_global_ciiu.parquet  factores.csv  flare.json  honduras_extensivo_viabilidad_atractivo.csv  honduras_intensivo_viabilidad_atractivo.csv  nested_ciiu.pkl  portafolios.csv  recodificacion_hnd_usa.csv  seleccion_final_complexity.xlsx  seleccion_pedro.csv
pages/: especializacion_industrias.py  perfil_industrias.py  portafolios.py  showcase.py  viabilidad_atractivo.py
utils/: __init__.py  utils.py
